tests/negative/typecheck/int_oob.orng
fn main() -> Int8 { 200 }